k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warp-business
  labels:
    app.kubernetes.io/part-of: warp-business
